src/test/ui/lifetimes/lifetime-errors/ex3-both-anon-regions-both-are-structs.stderr
error[E0623]: lifetime mismatch
  --> $DIR/ex3-both-anon-regions-both-are-structs.rs:6:12
   |
LL | fn foo(mut x: Vec<Ref>, y: Ref) {
   |                   ---      --- these two types are declared with different lifetimes...
LL |     x.push(y); //~ ERROR lifetime mismatch
   |            ^ ...but data from `y` flows into `x` here

error: aborting due to previous error

For more information about this error, try `rustc --explain E0623`.
