src/test/ui/lifetimes/lifetime-errors/ex3-both-anon-regions-both-are-structs.rs
struct Ref<'a> {
    x: &'a u32,
}

fn foo(mut x: Vec<Ref>, y: Ref) {
    x.push(y); //~ ERROR lifetime mismatch
}

fn main() {}
